examples/datalog/17_rule_commands/20_rule_clear_then_add.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_clear_add
Knowledge graph 'test_clear_add' created.
Switched to knowledge graph: test_clear_add
> .kg use test_clear_add
Switched to knowledge graph: test_clear_add
> +base[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'base'.
> +compute(X, Y) :- base(X), Y = X + 10.
Script error: Failed to register rule: Unsafe rule 'compute': Head variable(s) Y not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
