examples/datalog/17_rule_commands/20_rule_clear_then_add.dl
% Test: Clear rule then add new clause
% Expected: Clear removes all, then can add fresh
% Category: 17_rule_commands
% Priority: P2 - Rule management

.kg create test_clear_add
.kg use test_clear_add

+base[(1,), (2,), (3,)].

% Initial rule
+compute(X, Y) :- base(X), Y = X + 10.

?- compute(X, Y).

% Clear it
.rule clear compute

.rule

% Add new version
+compute(X, Y) :- base(X), Y = X * 100.

?- compute(X, Y).

.kg use default
.kg drop test_clear_add
